tests/closure/closure.exp
Error: Closure.js:20
 20: takes_string(global_x); // error
                  ^^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: Closure.js:38
 38:   takes_string(local_x); // error
                    ^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: Closure.js:57
 57: takes_string(global_y); // error
                  ^^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: Closure.js:77
 77:   takes_string(local_y); // error
                    ^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: cond_havoc.js:12
 12:   return x; // error, string ~/~> number (return type anno) TODO
              ^ string. This type is incompatible with the expected return type of
  6: function example(b: bool): number {
                                ^^^^^^ number

Error: const.js:20
 20:     call_me = () => { var y:number = var_x; };  // error
                                          ^^^^^ null. This type is incompatible with
 20:     call_me = () => { var y:number = var_x; };  // error
                                 ^^^^^^ number

Error: const.js:20
 20:     call_me = () => { var y:number = var_x; };  // error
                                          ^^^^^ undefined. This type is incompatible with
 20:     call_me = () => { var y:number = var_x; };  // error
                                 ^^^^^^ number


Found 7 errors
